# arrp

./: .gitmodules  CMakeLists.txt  README.md  README.rst  issues.txt  make-deb.sh  make-zip.sh
compiler/: CMakeLists.txt  arg_parser.cpp  arg_parser.hpp  compiler.cpp  compiler.hpp  main.cpp  options.hpp  report.cpp  report.hpp  version.template.hpp
frontend/: CMakeLists.txt  array_bounding.cpp  array_bounding.hpp  array_inflate.cpp  array_inflate.hpp  array_reduction.cpp  array_reduction.hpp  array_to_isl.cpp  array_to_isl.hpp  array_transpose.cpp  array_transpose.hpp  ast.hpp  ast_printer.hpp  collect_ids.hpp  context.hpp  driver.cpp  driver.hpp  environment.cpp  environment.hpp  environment_builder.cpp  environment_builder.hpp  error.cpp  error.hpp  folding.cpp  folding.hpp  frontend.cpp  func_copy.cpp  func_copy.hpp  func_reducer.cpp  func_reducer.hpp  func_reduction.cpp  func_reduction.hpp  func_type_checker.cpp  func_type_checker.hpp  functional_gen.cpp  functional_gen.hpp  ir-generator.cpp  ir-generator.hpp  lex.cc  linear_expr_gen.cpp  (+43 more)
interface/raw/: CMakeLists.txt  embed_template.py  generator.cpp  generator.h  interface-template.txt  interface.h  main.cpp
test/: CMakeLists.txt  make_test.sh.in  test-matrix-mult.cpp  test-reduction.cpp  test-reduction.in  test.c  test.hpp  test.in
test/apps/: CMakeLists.txt
test/apps/arg_max/: CMakeLists.txt  arg_max.arrp
test/apps/autocorrelation/: CMakeLists.txt  autocor_driver.cpp  autocorrelation.arrp  autocorrelation.stream
test/apps/biquad/: CMakeLists.txt  biquad.arrp  biquad_io.hpp
test/apps/eq/: eq.arrp
test/apps/fft/: CMakeLists.txt  fft.arrp  fft.stream  fft_driver.cpp
test/apps/fir/: CMakeLists.txt  fir.arrp  fir_io.hpp  fir_tester.cpp
test/apps/fm_radio/: expected_output.txt  fm_radio.in  fm_radio_driver.cpp  plot.py  run_valgrind.sh  vtune_settings
test/apps/lp/: CMakeLists.txt  lp.arrp
test/apps/mfcc/: CMakeLists.txt  mfcc.arrp  mfcc_io.hpp
test/apps/osc/: CMakeLists.txt  osc.arrp  osc_tester.cpp
test/apps/upsample/: CMakeLists.txt  upsample.arrp
test/apps/wavetable_osc/: CMakeLists.txt  wavetable_osc.arrp  wavetable_osc_tester.cpp
test/common/: CMakeLists.txt  compile_and_evaluate.sh  evaluate.py  generic_printer.hpp  generic_tester.hpp  inspect_io.hpp  io.hpp  perf_io.hpp  perf_measure_main.cpp  perf_pure_main.cpp  perf_test_main.cpp  test_main.cpp  test_parser.cpp  test_parser.hpp  testing.cpp  testing.hpp  utils.hpp
test/exe/: CMakeLists.txt  executable_tests.py  test-input
test/integration/: CMakeLists.txt  centroid.cpp  equalizer-compiler.cpp  equalizer-tester.cpp  equalizer.hpp  flux.cpp  mat-mul.cpp  model-construction.hpp  rms.cpp  sum.cpp  test-matrix-mult.cpp  test.hpp
test/libs/: array.arrp  array.stream  math.arrp  math.stream  signal.arrp  signal.stream
test/performance/: CMakeLists.txt  Makefile
test/performance/drivers/: test2_driver.cpp  test_driver.hpp
test/performance/dummy/: CMakeLists.txt
test/performance/fdtd-2d/: CMakeLists.txt  fdtd-2d.arrp
test/performance/fir_filter/: Makefile  fir_filter.in  fir_filter_driver.cpp
test/performance/fm_radio/: CMakeLists.txt  fm_radio.in  fm_radio_driver.cpp  fm_radio_ref.cpp
test/performance/input/: test1.in  test3.in  test4.in  test5.in
test/performance/mfcc/: CMakeLists.txt  mel_coefs.hpp  mfcc.arrp  mfcc_io.hpp  mfcc_ref.cpp
test/performance/reference/: test2_ref.cpp
test/sources/: array_and_scalar_in_case.in  array_and_scalar_in_primitive.in  array_and_scalar_op.in  array_app_error.in  array_concat1.in  array_concat2.in  array_enum1.in  array_enum2.in  array_enum3.in  array_in_case.in  array_in_primitive.in  array_recursive_type_inference.in  array_size.in  array_size_of_self.in  array_var_arg_in_local_id.in  func_arg in_local_id.in  func_ret_from_scope.in  func_var_broadcast2.in  func_var_broadcast4.in  join1.in  join2.in  multi_dim_recursion.in  propagated_array.in  propagated_array_var1.in  propagated_array_var3.in  propagated_const_id.in  test2.in  test3.in
test/sources/broken/: array_var_arg_in_local_id.in  func_in_prim.in  test1.in
test/sources/errors/: array_app_self_partial.in  array_app_wrong_arg_count.in  array_arg_out_of_bound2.in  array_bound_negative.in  array_bound_not_int.in  array_elem_func.in  array_recursive_untypeable.in  array_size_dim_invalid.in  array_size_dim_unbounded.in  case_func.in  case_operand_size_mismatch.in  func_app_of_scalar.in  main_func.in  prim_operand_func.in
test/unit/: CMakeLists.txt  array1.stream  array2.stream  array3.stream  array4.arrp  array5.arrp  array6.arrp  array_app_extra_dims.in  array_app_lambda_lift1.in  array_app_lambda_lift2.in  array_app_lambda_lift3.in  array_bounding1.in  array_bounding2.in  array_bounding3.in  array_bounding4.in  array_concat1.in  array_concat2.in  array_concat3.in  array_concat4.in  array_concat5.in  array_concat_recursive1.in  array_concat_recursive2.in  array_enum1.in  array_enum2.in  array_enum3.in  array_enum4.in  array_enum_recursive1.in  array_enum_recursive2.in  array_eq1.in  array_eq2.in  array_eq3.in  array_eq4.in  array_eq5.in  array_index_div.in  array_index_mod.in  array_index_nonaffine.in  array_index_nonaffine2.in  array_lambda1.arrp  array_lambda2.arrp  array_lambda3.arrp  (+89 more)
test/unit/errors/: array_app_arg_not_affine.in  case_func.in  (+31 more)
test/unit_tests/: CMakeLists.txt  slice1.in  test_binop.hpp  test_intrinsics.hpp  test_map.hpp  test_polyhedral_model.hpp  test_primitives.hpp  test_reduce.hpp  test_semantics.hpp  test_slice.hpp  test_transform.hpp  test_transpose.hpp  unit_test.cpp  unit_test.hpp  unit_test_driver.cpp.template  unit_test_polyhedral_model.cpp  unit_test_semantic.cpp
utility/: CMakeLists.txt  cpp-gen.cpp  cpp-gen.hpp  debug.cpp  debug.hpp  dispatch.hpp  filesystem.cpp  filesystem.hpp  find_files.cpp  find_files.h  isl_printer.hpp  mapping.hpp  matrix.hpp  platform.hpp  platform_default.cpp  platform_linux.cpp  platform_macos.cpp  printing.hpp  stacker.hpp  subprocess.cpp  subprocess.hpp  test-dispatch.cpp  test-introspectible.cpp  test-visitor.cpp  visitor.hpp  visitor_with_return_type.hpp
(+155 files in other folders)
